@@ -16,7 +16,7 @@ cd lookup
 ```sh
 cd lookup/
 ./gradlew clean build
-java -jar build/libs/lookup-service-0.2-onejar.jar server
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar build/libs/lookup-service-0.2-onejar.jar server
 ```
 
 The service will use the default project configuration located under `biblio-glutton/config/glutton.yml`. If you want to use a configuration file in another location, you can can specify it as additional parameter:
@@ -25,7 +25,7 @@ The service will use the default project configuration located under `biblio-glu
 ```sh
 cd lookup/
 ./gradlew clean build
-java -jar build/libs/lookup-service-0.2-onejar.jar server /some/where/glutton.yml
+java --add-opens java.base/java.nio=ALL-UNNAMED -jar build/libs/lookup-service-0.2-onejar.jar server /some/where/glutton.yml
 ```
 
 To check if it works, you can view a report of the data used by the service at `host:port/service/data`. For instance:
